--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
+  "name": "music_player",
+  "version": "1.0.0",
+  "description": "A Music player UI with some functionality like, play pause forward and backword the songs, with responsive design",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "build:css": "postcss style.css -o output.css",
+    "build": "npm run build:css"
+  },
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "font-awesome": "^4.7.0",
     "postcss": "^8.4.41",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.10"
   }
 }
